@@ -65,6 +65,11 @@ Developer-visible changes:
 	and BaseUdpTransport's CappedPacketSize have been renamed to
 	DefaultMaximumPacketSize.
 
+      * IMarshaller's Unmarshal() method has been changed to use an
+        event to notify of a message having become available.  This
+	was necessary to support marshallers that have dependencies
+	on receiving previous messages.
+
       * There have been some major renames:
 
 	  * Message.Id has been renamed Channel.  The use of 'id' was
